# vec

./: CMakeLists.txt  README.md  vec.cpp  vec.hpp  vecConfig.cmake.in
tests/: add.cpp  close.hpp  conj.cpp  cross.cpp  mod.cpp  norm.cpp  swap.cpp
